<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.coffeebeans.android.easylearning.StudentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/total_teachers_12"
        android:textColor="@color/darkTextColor"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/available_5"
        android:textColor="@color/darkTextColor"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/in_session_7"
        android:textColor="@color/darkTextColor"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnStartSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/connect"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />
</LinearLayout>
