<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.coffeebeans.android.easylearning.SessionActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/profile_image"
        android:gravity="center_horizontal"
        android:text="@string/shereen"
        android:textColor="@color/textColor"
        android:paddingBottom="20dp"
        android:id="@+id/txtName"
        android:textSize="22sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtName"
        android:gravity="center_horizontal"
        android:text="@string/fifth_grade_math"
        android:layout_marginTop="20dp"
        android:textColor="@color/textColor"
        android:textSize="18sp" />
    <Button
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="16dp"
        android:text="@string/answer"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="16dp"
        android:text="@string/decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
